--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bolder;
     height: 100%;
-    background-image: url("/img/fondocomic.jpg");
+    background-image: url("img/fondocomic.jpg");
     display: flex;
     flex-direction: column;
     align-items: center;
