--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-attachment: fixed;
+    height: fit-content;
+    padding-bottom: 1rem;
+}
+
+body::-webkit-scrollbar{
+    width: 0px;
 }
 
 .header {
@@ -24,6 +31,66 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.final-questions{
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    min-width: 40%;
+    align-items: center;
+    justify-content: center;
+    margin-inline: 2rem;
+}
+.final{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.418);
+    backdrop-filter: blur(10px);
+    max-width: 650px;
+    min-width: 100%;
+    box-sizing:border-box;
+    margin-inline: 1rem;
+    gap: 2rem;
+    padding: 2rem;
+    border-radius: 1rem;
+    -webkit-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.4);
+}
+
+
+.buttons{
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttons>*{
+    padding: 0.5rem;
+    background-color: white;
+    border-radius: 1rem;
+    min-width: 8rem;
+    max-width: 8rem;
+    display: flex;
+    justify-content: center;
+    padding: 0.7rem;
+    -webkit-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.4);
+    font-size: clamp(0.8rem, 1.5vw, 1rem);
+    text-align: center;
+
+}
+.final > h2{
+    font-size: clamp(1.2rem, 1.5vw, 1.5rem);
+    color: black;
+    text-align: center;
+
 }
 
 .header h1{
@@ -49,7 +116,7 @@ body {
 }
 .question-number{
     position: absolute;
-    font-size: 1.3rem;
+    font-size: clamp(1.2rem, 2vw, 1.3rem);
     border: 1px solid black;
     border-radius: 50%;
     top: 20px;
@@ -64,6 +131,7 @@ body {
 }
 .Question{
     text-align: center;
+
 }
 .quiz-container {
     display: flex;
@@ -74,6 +142,7 @@ body {
 }
 
 .quiz-card {
+    margin-top: 2rem;
     position: relative;
     background-color: rgba(255, 255, 255, 0.418);
     backdrop-filter: blur(10px);
@@ -93,12 +162,12 @@ body {
 }
 
 .quiz-card h2 {
-    font-size: 2rem;
+    font-size: clamp(1.3rem, 2vw, 2rem);
 }
 
 .quiz-card .ans {
     text-transform: capitalize;
-    font-size: 1.3rem;
+    font-size: clamp(1rem, 2vw, 1.3rem);
     display: flex;
     justify-content: center;
     padding-block: 1rem;
@@ -117,7 +186,7 @@ body {
 .quiz-card .text-options {
     max-width: 60%;
     display: flex;
-    gap: 6rem;
+    gap: 4rem;
     align-items: center;
     flex-direction: column;
 }
@@ -171,6 +240,10 @@ body {
 
     .separator{
         display: none;
+    }
+
+    .text-options{
+        gap: 2rem!important;
     }
     
 }
