--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bolder;
     height: 100%;
-    background-image: url("/Quiz/img/fondocomic.jpg");
+    background-image: url("/img/fondocomic.jpg");
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -221,7 +221,77 @@ body::-webkit-scrollbar{
     animation: brightness 3s ease infinite;
     animation-delay: var(--time,2s);
 }
+.final-card-count {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    align-items: center;
+    gap: 1rem;
+    background-color: rgba(255, 255, 255, 0.322);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    padding: 2rem;
+    min-height: 400px;
+    max-width: 400px;
+    margin-top: 3rem;
+    font-size: 1.5rem;
+    border-radius: 1rem;
+    -webkit-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.51);
+    -moz-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.51);
+    box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.51);
+    justify-content: space-around;
+}
+.final-card-image {
+    max-width: 100%;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.51);
+    -moz-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.51);
+    box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.51);
+   
+}
+.final-card-button {
+font-size: 1.1rem;
+background-color: #ffffff;
+padding-block: 0.5rem;
+padding-inline: 2rem;
+border-radius: 1rem;
+-webkit-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.51);
+-moz-box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.51);
+box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.51);
+transition: all 200ms ease;
+}
 
+.final-card-button:hover{
+    background-color: #29aae1;
+    color: #fafafa;
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+}
+
+.final-card-buttons{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
+
+.final-card-rrss{
+    display: flex;
+    gap: 1rem;
+
+}
+
+.final-card-rrss >*{
+    font-size: 25px;
+    
+}
 @keyframes brightness {
 
     from {
